--- a/style.css
+++ b/style.css
@@ -6,25 +6,26 @@
     overflow: hidden;
   }
   
-  .main {
-      display: flex;
-      height: 100vh;
+.main {
+    display: flex;
+    height: 100vh;
+    padding: 0.5rem;
   }
   
-  .sidebar {
-      background-color: black;
-      width: 340px;
-      border-radius: 1rem; /*1rem=16px*/
+.sidebar {
+    background-color: black;
+    width: 340px;
+    border-radius: 1rem; /*1rem=16px*/
   }
   
-  .main-content {
-      background-color: #121212;
-      flex: 1;
-      border-radius: 1rem; /*1rem=16px*/
-      overflow: auto;
+.main-content {
+    background-color: #121212;
+    flex: 1;
+    border-radius: 1rem; /*1rem=16px*/
+    overflow: auto;
   }
   
-  .music-player {
+.music-player {
       background-color: black;
       position: fixed;
       bottom: 0px;
@@ -32,12 +33,12 @@
       height: 72px;
   }
   
-  a {
+a {
       text-decoration: none;
       color: white;
   }
   
-  .nav {
+.nav {
       background-color: #121212;
       border-radius: 1rem;
       display: flex;
@@ -47,41 +48,105 @@
       padding: 0.5rem 0.75rem;
   }
   
-  .nav-option {
+.nav-option {
       background-color: #121212;
       line-height: 2.5rem;
       opacity: 0.7;
       padding: 0.5rem 0.75rem;
   }
   
-  .nav-option:hover {
+.nav-option:hover {
       background-color: #121212;
       opacity: 1;
   }
   
-  .nav-option i {
-      font-size: 1.25rem;
+.nav-option i {
+  background-color: #121212;
+  font-size: 1.25rem;
   }
   
-  .nav-option a {
-      font-size: 1rem;
-      margin-left: 1rem;
+.nav-option a {
+  background-color: #121212;
+  font-size: 1rem;
+  margin-left: 1rem;
   }
 
 .library {
-    background-color: #121212;
-    border-radius: 1rem;
-}
-
-.lib-option {
-    background-color: #121212;
-
+  background-color: #121212;
+  border-radius: 1rem;
+  height: 100%;
+  margin-top: 0.5rem;
+  padding: 0.5rem 0.75rem;
 }
 
 .options {
-    display: flex;
+  background-color: #121212;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.lib-option {
+  background-color: #121212;
+}
+
+.lib-option img {
+  background-color: #121212;
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.lib-option a {
+  background-color: #121212;
 }
 
 .icons {
-    display: flex;
+  background-color: #121212;
+  font-size: 1.25rem;
+  display: flex;
+}
+
+.icons i {
+  background-color: #121212;
+  opacity: 0.7;
+  margin-right: 1rem;
+}
+
+.icons i:hover {
+  opacity: 1;
+}
+
+.lib-box {
+  background-color: #121212;
+}
+
+.box {
+  background-color: #232323;
+  height: 8rem;
+  border-radius: 0.75rem;
+  margin: 0.75rem 0 0.5rem 0;
+  padding: 0.75rem 1rem;
+}
+
+.box-p1 {
+  background-color: #232323;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.box-p2 {
+  background-color: #232323;
+  font-size: .75rem;
+  opacity: 0.9;
+}
+
+.badge {
+  background-color: #000;
+  border: none;
+  border-radius: 100px;
+  padding: 0.25rem 1rem;
+  font-weight: 700;
+  margin-top: 0.5rem;
+  height: 2rem;
+  width: fit-content;
 }
